@@ -10,6 +10,7 @@
 #define _SERVERBENCHMARK_HPP_
 
 #include "Actions.hpp"
+#include "Vector.hpp"
 
 #include <QtGlobal>
 #include <QObject>
@@ -32,7 +33,7 @@ namespace SphereSim
          * \param detectCollisions Flag for collision detection.
          * \param calculateGravity Flag for gravity calculation.
          * \param calculateLennardJonesPotential Flag for gravity calculation. */
-        void runBenchmark_internal(bool detectCollisions, bool calculateGravity,
+        Scalar runBenchmark_internal(bool detectCollisions, bool calculateGravity,
             bool calculateLennardJonesPotential);
 
         /** \brief Run a benchmark test with many spheres. */
