@@ -26,6 +26,7 @@
 * Improved console output and removed QDebug occurrences.
 * Improved console output formatting using field width.
 * Fixed missing break in switch.
+* Added comparable score to Benchmark.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
